# UdemyCmake

./: .gitmodules
myProject/: CMakeLists.txt  Makefile
myProject/app/: main.cpp
myProject/cmake/: AddGitSubmodule.cmake
myProject/configured/: config.hpp.in
myProject/src/mylib/: CMakeLists.txt
